# PyPad-v2

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  test.py
interface/basic/: gui.py
scr/: __init__.py
scr/config/: config.py  icons.qrc
scr/configs/patterns/: __init__.py  highlighter_patterns.py
scr/configs/pics/: __init__.py  pics.py
scr/configs/themes/: __init__.py  code_themes.py
scr/data/: conf.json  dist.json  settings.json
scr/data/themes/: github-theme.json  gruvbox-theme.json  one-dark.json  pypad-theme.json
scr/exceptions/: __init__.py  file_exceptions.py
scr/interface/abstract/: __init__.py  dialog.py  input_dialog.py  list_changer.py  shell.py  windows.py
scr/interface/additional/: __init__.py  project_changer.py  restarter.py  tabs_switcher.py  theme_changer.py  (+2 more)
scr/project/: __init__.py  directory_config.py  icon_generator.py  project_config.py  version_config.py
scr/scripts/: __init__.py  auto_completer.py  code_analyzer.py  code_highlighter.py  file_checker.py  file_dialog.py  file_loader.py  font.py  font_manager.py  icon_provider.py  run.py  settings_updater.py  theme_manager.py  util.py
scr/style/: main.css
scr/styles/: action_menu.css  completer.css  editor_area.css  settings_menu.css  side_bar.css  switchers.css  tab_editor.css  ui.css
scr/subwidgets/: __init__.py  action_menu.py  completer.py  tabs_switcher.py  ui.py
scr/widgets/: __init__.py  code_area.py  code_map.py  file_tree.py  image_viewer.py  settings_menu.py  side_bar.py  status_bar.py  tab_editor.py  text_area.py  welcome_screen.py
(+98 files in other folders)
