[tool.poetry]
name = "pypad"
version = "0.2.2-alpha"
description = ""
authors = ["chebupelka8 <stpzamyatin@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pyside6 = "6.6.0"
pillow = "^10.2.0"
auto-py-to-exe = "^2.42.0"
cpalette = "^1.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
